# archmcp

./: .gitignore  Makefile  README.md  go.mod  go.sum  mcp-arch.yaml
.hive/: issues.jsonl  memories.jsonl
cmd/archmcp/: main.go  main_test.go
examples/: full.yaml  rust.yaml
internal/config/: config.go
internal/explainers/apisurface/: apisurface.go  apisurface_test.go
internal/explainers/cohesion/: cohesion.go  cohesion_test.go
internal/explainers/coupling/: coupling.go  coupling_test.go
internal/explainers/coverage/: coverage_test.go
internal/explainers/deadcode/: deadcode.go  deadcode_test.go
internal/explainers/depdepth/: depdepth.go  depdepth_test.go
internal/explainers/godmodule/: godmodule.go  godmodule_test.go
internal/explainers/stability/: stability.go  stability_test.go
internal/explainers/testmap/: testmap.go  testmap_test.go
internal/extractors/rubyextractor/: ruby.go  ruby_test.go
internal/extractors/rustextractor/: routes.go  routes_test.go  rust.go  rust_callgraph.go  rust_callgraph_test.go  rust_generics.go  rust_generics_test.go  rust_modules.go  rust_modules_test.go  rust_test.go  storage.go  storage_test.go
internal/extractors/treesitter/: walker.go  walker_test.go
internal/server/: server.go
testdata/rust/: Cargo.toml  basic.rs  imports.rs
