[package]
name = "archmcp-testdata"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"

[workspace]
members = [
    "crates/core",
    "crates/cli",
]
